@@ -12,6 +12,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
     - cache/relation:
       - [API break] ArchitecturedRelation, ArchitecturedRelationExpression:
         constructor from string subrange is now explicit.
+    - config:
+      - Don't store unused APT variables anymore.
   * debian:
     - control:
       - Bumped the library API version.
